update article section for new tweet and existing tweet. Include avatar images. stylizing

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         <h2>Compose Tweet</h2>
 
         <!-- FORM Data for a new tweet -->
-
+        
         <form method="POST" action="/tweets">
           <label class="formLabel" for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
@@ -69,6 +69,35 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+
+      <br>
+      
+      <!-- Existing tweets section -->
+      <section class="all-tweets">
+        <header>
+          <!-- Div holds the avatar and name -->
+          <div>
+            <!-- <img src="/public/images/lRUnDgU.png">   Needs MENTOR -->
+            <h4>Frodo Baggins</h4>
+          </div>
+
+          <!-- Username handle is also stored in the header -->
+          <h4>@misterUnderhill</h4>
+        </header>
+
+        <!-- Tweet text below -->
+        <div class="tweettext">
+          <p>Tweet text goes here. If you happen to write a lot of words as a bad habit then you might just run out of the space you need. Important: mak</p>
+        </div>
+        <footer>
+          <p>10 days ago</p>
+          <div class="tweet-links">
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </footer>
       </section>
     </main>
   </body>
