add hover and shadow box style on tweet articles, css adjust container orientation/alignment

--- a/public/index.html
+++ b/public/index.html
@@ -72,32 +72,34 @@
       </section>
 
       <br>
-      
+
       <!-- Existing tweets section -->
       <section class="all-tweets">
-        <header>
-          <!-- Div holds the avatar and name -->
-          <div>
-            <!-- <img src="/public/images/lRUnDgU.png">   Needs MENTOR -->
-            <h4>Frodo Baggins</h4>
-          </div>
+        <article class="single-tweet">
+          <header>
+            <!-- Div holds the avatar and name -->
+            <div>
+              <img class="tweet-avatar" src="images/lRUnDgU.png">
+              <h4 class="full-name">Frodo Baggins</h4>
+            </div>
 
-          <!-- Username handle is also stored in the header -->
-          <h4>@misterUnderhill</h4>
-        </header>
+            <!-- Username handle is also stored in the header -->
+            <h4 class="user-handle">@misterUnderhill</h4>
+          </header>
 
-        <!-- Tweet text below -->
-        <div class="tweettext">
-          <p>Tweet text goes here. If you happen to write a lot of words as a bad habit then you might just run out of the space you need. Important: mak</p>
-        </div>
-        <footer>
-          <p>10 days ago</p>
-          <div class="tweet-links">
-            <i class="fa-solid fa-flag"></i>
-            <i class="fa-solid fa-retweet"></i>
-            <i class="fa-solid fa-heart"></i>
+          <!-- Tweet text below -->
+          <div class="tweettext">
+            <p>Tweet text goes here. If you happen to write a lot of words as a bad habit then you might just run out of the space you need. Important: mak</p>
           </div>
-        </footer>
+          <footer>
+            <p>10 days ago</p>
+            <div class="tweet-links">
+              <i class="fa-solid fa-flag"></i>
+              <i class="fa-solid fa-retweet"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </footer>
+        </article>
       </section>
     </main>
   </body>
