add test functionality to append new tweet data to main container

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 
           <!-- Tweet text below -->
           <div class="tweettext">
-            <p>Tweet text goes here. If you happen to write a lot of words as a bad habit then you might just run out of the space you need. Important: mak</p>
+            <p>Anyone down for a long hike this weekend? I was thinking of heading east, my uncle said they have some great views. </p>
           </div>
           <footer>
             <p>10 days ago</p>
@@ -100,6 +100,7 @@
             </div>
           </footer>
         </article>
+        <br>
       </section>
     </main>
   </body>
