--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
         <!-- FORM Data for a new tweet -->
         
-        <form method="POST" action="/tweets">
+        <form method="POST" action="/tweets" class="tweet-form">
           <label class="formLabel" for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="buttonCounter">
