place write a new tweet icon below text in header

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <nav class="navclass">
       <span class="logo">tweeter</span>
 
-      <span class="navMenu"><b>Write</b> a new tweet 
+      <span class="navMenu"><b>Write</b> a new tweet <br>
         <i class="fa-solid fa-angles-down"></i></span>
     </nav>
 
